<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo_Glusity"
            android:src="@drawable/logo_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/saran_obesitas"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#7E1C3A"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/img_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/layout_prediction_result"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="@drawable/bg_card"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_prediction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_prediksi"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#7E1C3A"
                android:gravity="center"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_prediction_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/predict"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_suggestions"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:background="@drawable/bg_card"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_prediction_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_suggestions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saran"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#7E1C3A"
                android:gravity="center"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_suggestions_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/recom_obesitas"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/back_button"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="#FFFFFF"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>