<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/back_button"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="72dp">

        <ImageView
            android:id="@+id/iconSuccess"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_success"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/succes"
            android:textAlignment="center"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button" />
    </LinearLayout>
</RelativeLayout>